--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,9 @@ include_directories("${PROJECT_SOURCE_DIR}/Trygonometria")
 add_subdirectory(Trygonometria)
 target_link_libraries(Laborka Trygonometria)
 endif (USE_TRIGONOMETRY_DEGREE)
+
+configure_file(
+"${PROJECT_SOURCE_DIR}/LaborkaConfig.h.in"
+"${PROJECT_BINARY_DIR}/LaborkaConfig.h"
+)
+include_directories("${PROJECT_BINARY_DIR}")
